--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,11 @@
             "app/Function/gettitle.php",
             "app/Function/getAuthor.php",
             "app/Function/getCom.php",
-            "app/Function/getImg.php"
+            "app/Function/getImg.php",
+            "app/Function/getArticle.php",
+            "app/Function/getComnum.php",
+            "app/Function/getGood.php"
+
 
         ]
     },
