--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
             "app/Function/getImg.php",
             "app/Function/getArticle.php",
             "app/Function/getComnum.php",
-            "app/Function/getGood.php"
+            "app/Function/getGood.php",
+            "app/Function/getPerson.php"
 
 
         ]
